Contrast error fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,11 @@ body {
 	width: 20px;
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+  color: #595959;
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
